<resources>
    <string name="app_name">Food Ordering App</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="design_by_neatroots">Design By NeatRoots</string>
    <string name="enjoy_restaurant_quality_meals_at_home">Enjoy Restaurant Quality Meals at Home</string>
    <string name="next">Next</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="coutinue_with">Coutinue With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="proceed">Proceed</string>
    <string name="spacy_fresh_crab">Spacy fresh crab</string>
    <string name="_35">$35</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="waroenk_kita">Waroenk kita</string>
    <string name="recent_buy">Recent buy</string>
    <string name="buy_again">Buy again</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="save_information">Save Information</string>
    <string name="admin">Admin</string>
    <string name="notification">Notification</string>
    <string name="edit">Edit</string>
    <string name="place_my_order">Place My Order</string>
    <string name="total_amount">Total Amount</string>
    <string name="go_home">Go Home</string>
    <string name="food_name">Food Name</string>
    <string name="short_description">Short description</string>
    <string name="add_to_chart">Add To Chart</string>
    <string name="menu">Menu</string>
</resources>