<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="134dp"
            android:layout_height="135dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/waves_of_food"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFeatureSettings="20dp"
            android:text="@string/deliver_favorite_food"
            android:textColor="#53E88B"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login_to_your_account"
            android:textColor="#53E88B"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:hint="@string/email"
            android:padding="15dp"
            android:paddingStart="10dp"

            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/edittextshape"
            android:drawableLeft="@drawable/lock"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:hint="@string/password"
            android:padding="15dp"
            android:paddingStart="10dp"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coutinue_with"
            android:textSize="25dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_with"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/whitebutton"
                android:drawableLeft="@drawable/facebook"
                android:text="@string/facebook"
                android:padding="15dp"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_google"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="4dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/whitebutton"
                android:drawableLeft="@drawable/google"
                android:padding="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawablePadding="10dp"
                android:text="@string/google"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.775"
                app:layout_constraintStart_toEndOf="@id/btn_facebook"
                tools:layout_editor_absoluteY="-1dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/greenbuttongradient"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp" />


        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="#53E88B" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>