<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/historyItem">

        <androidx.cardview.widget.CardView

            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="12dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="399dp"
                android:layout_height="120dp"
                android:padding="5dp">

                <ImageView

                    android:id="@+id/imageView"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/radius_image"
                    android:src="@drawable/menu2"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tvHisFoodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spacy_fresh_crab"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.085"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.309" />

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"

                    android:text="@string/waroenk_kita"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.073"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/tvHisFoodName"
                    app:layout_constraintVertical_bias="0.076" />

                <TextView
                    android:id="@+id/tvHisPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"

                    android:text="@string/_35"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.063"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/tv"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.cardview.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:backgroundTint="#4BFF5D"
                    android:padding="15dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.505">

                    <TextView
                        android:id="@+id/tvBuyAgain"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/buy_again"
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>